# website

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  LICENSE  README.md  compose.production.yml  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.mjs  tailwind.config.ts
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  go.sum  rust-toolchain.toml
backend/api/: oapi-codegen.yaml  openapi.yaml
backend/cmd/api/: main.go
backend/cmd/install/: main.go
backend/cmd/publish-export/: main.go
backend/internal/app/: server.go
backend/internal/auth/: jwt.go
backend/internal/config/: config.go
backend/internal/contentmd/: documents.go  documents_test.go  metadata.go
backend/internal/contentstate/: state.go
backend/internal/domain/: content.go
backend/internal/editorial/: history.go
backend/internal/gitrepo/: repository.go
backend/internal/http/: router.go
backend/internal/id/: generator.go
backend/internal/operational/: git_store.go  models.go  mongo_store.go  state_store.go
backend/internal/publiccontent/: reader.go  service.go  service_test.go  site_snapshot.go
backend/internal/publish/: exporter.go  exporter_test.go  preview.go  preview_test.go  publisher.go  publisher_test.go  reader.go
backend/internal/store/: admin_store.go  home_store.go  (+16 more)
backend/src/: auth.rs  config.rs  content_repo.rs  editorial.rs  error.rs  main.rs  models.rs  notion.rs  object_storage.rs  routes.rs
(+401 files in other folders)
