[package]
name = "website-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
argon2 = "0.5"
aws-credential-types = "1"
aws-sdk-s3 = "1"
axum = "0.8"
dotenvy = "0.15"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
humantime = "2.3"
http = "1"
jsonwebtoken = { version = "10.3", default-features = false, features = ["rust_crypto"] }
mongodb = "3.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["catch-panic", "compression-gzip", "cors", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
ulid = "1.2"
validator = { version = "0.20", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
